Implemented Add for Visit Services
